--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,7 +540,10 @@ footer .brand h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
 
+.about_services{
+    gap: 2rem;
 }
 
 /* ====== PROJECTS PAGE  ======*/
