change typography sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,21 @@ body {
     --clr-accent-dark: rgb(0, 51, 102);
     --clr-gradient: linear-gradient(180deg, rgba(38, 100, 162, 0.7) 0%, rgba(0, 153, 204, 0.8) 100%);
     /* typography sizing  */
-    --text-2xs: clamp(0.5rem, 0.4vw, 0.6rem);
+    /* --text-2xs: clamp(0.5rem, 0.4vw, 0.6rem);
     --text-xs: clamp(0.75rem, 1vw, 1rem);
     --text-sm: clamp(1rem, 2vw, 1.2rem);
     --text-md: clamp(1.5rem, 3vw, 2rem);
     --text-lg: clamp(2rem, 4vw, 2.5rem);
     --text-xl: clamp(2.4rem, 4.5vw, 3rem);
-    --text-2xl: clamp(2.8rem, 5vw, 3.5rem);
+    --text-2xl: clamp(2.8rem, 5vw, 3.5rem); */
+
+    --text-2xs: 0.75rem;
+    --text-xs: 0.875rem;
+    --text-sm: 1rem;
+    --text-md: 1.5rem;
+    --text-lg: 1.875rem;
+    --text-xl: 3rem;
+    --text-2xl: 3.75rem;
     /* box-shadows  */
     --shadow-hover: 0px 14px 19px -6px rgba(0, 0, 0, 0.24)
 }
@@ -67,19 +75,19 @@ h1,
 }
 
 h2 {
-    font-size: var(--text-md);
+    font-size: var(--text-lg);
 }
 
 h3 {
-    font-size: var(--text-lg);
+    font-size: var(--text-md);
 }
 
 h4 {
-    font-size: var(--text-lg);
+    font-size: var(--text-sm);
 }
 
 p,
-span {
+span, li{
     font-size: var(--text-sm);
 }
 
