--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,8 +277,8 @@ header {
 
 .card_image {
     background-color: var(--clr-accent-dark);
-    width: 50%;
-    height: 400px;
+    width: 100%;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -290,7 +290,7 @@ header {
 }
 
 .case_card {
-    display: flex;
+    grid-template-columns: 60% 40%;
     background-color: var(--clr-pry-light);
 }
 
@@ -299,7 +299,10 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
+    gap:1rem;
 }
+.case_card:hover card
 
 /* contact section  */
 .form {
@@ -523,7 +526,7 @@ footer .brand h1 {
 
     .case_card {
         /* change direction flow of case card  */
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 
     .card_image {
