--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -571,6 +571,15 @@ footer .brand h1 {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
+.services_articles{
+    grid-template-columns:300px 1fr;
+    gap: 2rem;
+}
+
+.services_article_block{
+    gap:2rem;
+}
+
 .article_image {
     width: 100%;
     height: 100%;
@@ -585,3 +594,6 @@ footer .brand h1 {
 .article_text {
     font-size: var(--text-sm);
 }
+
+
+
