fixed bugs on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,8 +164,10 @@ header {
 
 /* brand logo and text  */
 .brand {
+    grid-template-columns: 50px 1fr;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+
 }
 
 .brand span {
@@ -173,11 +175,8 @@ header {
     color: var(--clr-accent-light);
     font-size: 1.3rem;
 }
-
-.brand h1 {
-    text-transform: uppercase;
-    font-size: var(--text-xs);
-    letter-spacing: 2px;
+.brand:hover {
+   transform: scale(1.01);
 }
 
 .nav_items {
@@ -269,7 +268,7 @@ header {
 }
 
 .card:hover {
-    scale: 101%;
+    transform: scale(1.01);
     box-shadow: var(--shadow-hover);
 }
 
@@ -381,7 +380,8 @@ input:active {
     background-color: var(--clr-accent-light);
     color: var(--clr-pry-light);
     box-shadow: var(--shadow-hover);
-    scale: 103%;
+    transform: scale(1.01);
+
 }
 
 .btn_sec {
@@ -422,8 +422,8 @@ input:active {
 
 .cta:hover {
     border: none;
-    scale: 103%;
-    border: 2px solid var(rgba(156, 219, 255, 0.7));
+    transform: scale(1.01);
+    border: 2px solid rgba(156, 219, 255, 0.7);
 
 }
 
@@ -585,5 +585,7 @@ footer .brand h1 {
     font-size: var(--text-sm);
 }
 
-
-
+iframe{
+    width:100%;
+    height:420px;
+}
